--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-axios": "^3.4.1",
+    "vue-cookie": "^1.1.4",
     "vue-html-editor": "^0.2.1",
     "vue-router": "^3.2.0",
     "vuetify": "^2.6.0",
