--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "axios": "^0.26.0",
+    "bcrypt": "^5.1.0",
     "core-js": "^3.6.5",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
